--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'India -- Juvenile literature'
 - !lcsh 'Elephants -- Juvenile literature'
 - !lcc 'QL'
+- GITenberg
 title: Kari the Elephant
 url: http://www.gutenberg.org/ebooks/24460
